--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -9,7 +9,7 @@
       <%= render 'layouts/error_messages', model: f.object %>
       
       <div class="form-group">
-        <%= f.label :avatar, 'avatar' %>
+        <%= f.label :avatar, 'Name' %>
         <%= f.file_field :avatar, class: 'form-control' %>
       </div>
       
