--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -8,3 +8,6 @@
     </div>
   </div>
 <% end %>
+<div class="main">
+  <%= link_to '投稿からユーザーを探す', posts_path, class: 'btn btn-lg btn-success' %>
+</div>
