--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <h1>Sign up</h1>
+  <h1>Edit</h1>
 </div>
 
 <div class="row">
@@ -21,6 +21,11 @@
       <div class="form-group">
         <%= f.label :email, 'Email' %>
         <%= f.email_field :email, class: 'form-control' %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :profile, 'Profile' %>
+        <%= f.text_area :profile, class: 'form-control' %>
       </div>
 
       <div class="form-group">
