--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -8,9 +8,16 @@
     
       <p><%= @tag.content %></p>
       
+      <%= render 'tag_relations/tag_add_button', tag: @tag %>
+      
       <% if logged_in? && current_user.id == @tag.user.id %>
         <%= link_to 'タグ削除', tag_path(@tag), method: :delete, class: 'btn btn-danger' %>
       <% end %>
+      
+      <div>
+        <p class='text-center'>参加しているユーザー</p>
+        <%= render 'users/users', users: @users %>
+      </div>
     </div>
   </div>
 </div>
