--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -1,17 +1,22 @@
 <% if users.any? %>
-  <ul class="list-unstyled">
+  <div class='row'>
     <% users.each do |user| %>
-      <li class="media">
-        <div class="media-body">
-          <div>
-            <%= user.name %>
+      <div class="col-lg-2 col-md-3 col-sm-6 col-xs-8">
+        <div class="card mb-3">
+          <div class="card-header">
+              <%= link_to user.name, user_path(user) %>
           </div>
-          <div>
-            <p><%= link_to 'View profile', user_path(user) %></p>
+          <div class="card-body">
+            <% if user.avatar.attached? %>
+              <%= image_tag user.avatar, size: '50x50' %>
+            <% else %>
+              No image
+            <% end %>
           </div>
         </div>
-      </li>
+      </div>
     <% end %>
-  </ul>
-  <%= paginate users %>
+  </div>
 <% end %>
+
+
