--- a/app/views/users/add_tag.html.erb
+++ b/app/views/users/add_tag.html.erb
@@ -1,8 +1,8 @@
 <div class="text-center">
   <% if @user.avatar.attached? %>
-    <%= image_tag @user.avatar %>
-      <% end %>
-    <p><%= @user.name %></p>
+  <%= image_tag @user.avatar %>
+    <% end %>
+  <p><%= @user.name %></p>
   <% if logged_in? && current_user.id == @user.id  %>
     <%= link_to 'プロフィール編集', edit_user_path(current_user), class: 'btn btn-primary' %>
   <% end %>
@@ -27,6 +27,6 @@
       <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Posts</a></li>
       <li class="nav-item"><a href="<%= add_tag_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(add_tag_user_path(@user)) %>">Tags</a></li>
     </ul>
-    <%= render 'posts/posts', posts: @posts %>
+    <%= render 'tags/tags', tags: @user.adding_tags %>
   </div>
 </div>
