--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,26 @@
   </head>
 
   <body>
-    <%= render 'layouts/navbar' %>
-
+  
     <div class="container">
+      <!--header-->
+      <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                  <h1 class='text-center'>Engineer Link</h1>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!--//header-->
+      
+      <% if logged_in? %>
+        <%= render 'layouts/navbar_login' %>
+      <% else %>
+        <%= render 'layouts/navbar2' %>
+      <% end %>
+      
       <%= render 'layouts/flash_messages' %>
 
       <%= yield %>
