--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -19,6 +19,27 @@ header{
   color: #666;
 }
 
+a{
+  text-decoration: none;
+  color: #666;
+}
+
 .headerNavBtn:hover{
   background:#EEE;
+}
+
+.tag {
+  margin-bottom: 50px;
+}
+
+.tag-form{
+  margin-top: 50px;
+}
+
+.top-nav-tabs{
+  margin-top: 30px;
+}
+
+.avatar{
+  margin-right: 10px;
 }
