--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-8">
-    <%= image_tag @post.user.avatar, size: '50x50' %>
+    <%= image_tag @post.user.avatar, size: '50x50', class: 'avatar' %>
     <%= @post.content %>
   </div>
 </div>
