--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -6,9 +6,9 @@
   
   <ul class="nav nav-tabs nav-justified mb-3 top-nav-tabs">
     <li class="nav-item"><a href="<%= root_path %>" class="nav-link">メッセージ</a></li>
-    <li class="nav-item"><a href="<%= followers_user_path(current_user) %>" class="nav-link">いいねされてる</a></li>
+    <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link">いいねされてる</a></li>
   </ul>
-  <%= render 'users/users', users: @users %>
+  <%= render 'users', users: @followers %>
   
 <% else %>
   <div class="center jumbotron">
@@ -18,4 +18,3 @@
     </div>
   </div>
 <% end %>
-
