--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -5,7 +5,7 @@
   </div>
   
   <ul class="nav nav-tabs nav-justified mb-3 top-nav-tabs">
-    <li class="nav-item"><a href="<%= root_path %>" class="nav-link">メッセージ</a></li>
+    <li class="nav-item"><a href="<%= root_path %>" class="nav-link">マッチング</a></li>
     <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link">いいねされてる</a></li>
   </ul>
   <%= render 'users', users: @followers %>
