--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -91,3 +91,8 @@ div.message_form {
   padding-top: 15px;
   color: #000033;
 }
+
+#message_content{
+  font-family: "serif";
+  border-bottom: 1px solid #EEEEEE;
+}
