--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,4 +1,10 @@
-<!-- <h3 class="text-center messagebox-user"><%= @user.name %></h3> -->
+<h3 class="text-center messagebox-user"><%= @user.name %></h3>
+<div class="text-center">
+  <% if @user.avatar.attached? %>
+    <%= image_tag @user.avatar,size: '50x50' %>
+  <% end %>
+</div>
+
 <% if logged_in? %>
   <section class="message_box">
     <div id="messages">
