--- a/app/views/messages/_message_top.html.erb
+++ b/app/views/messages/_message_top.html.erb
@@ -1,17 +1,18 @@
 <% if users.any? %>
   <div class='row'>
     <% users.each do |user| %>
-      <div class="col-lg-2 col-md-3 col-sm-6 col-xs-8 text-center">
+      <div class="col-lg-2 col-md-3 col-sm-6 col-xs-8 text-center username">
         <div class="card mb-3">
           <div class="card-header">
-            <%= link_to user.name, message_path(user) %>
+            <a class="text-center" href="<%= user_path(user) %>"><%= user.name %></a>
           </div>
           <div class="card-body">
             <% if user.avatar.attached? %>
-              <%= image_tag user.avatar, size: '100x100' %>
+              <p><%= image_tag user.avatar, size: '100x100' %></p>
             <% else %>
               No image
             <% end %>
+            <%= link_to 'メッセージ', message_path(user), class: 'btn btn-primary'%>
           </div>
         </div>
       </div>
