--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -16,7 +16,12 @@
         <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
       <% end %>
     <% else %>
-      <p>ログインしよ</p>
+      <p class="text-center">タグを追加するにはログインが必要です</p>
+      <a class="top-signup signup", href="<%= signup_path %>">Sign up</a>
+    
+      <p class="text-center">or</p>
+
+      <a class="top-signup login", href="<%= login_path %>">Login</a>
     <% end %>
   </aside>
 </div>
