--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -13,21 +13,21 @@
   <h3 class="text-center">エンジニア専用の、マッチングアプリ。</h3>
   <div class='container'>
     
-    <div class='top'>
+    <div class='top' ontouchstart="">
       <div class="mask">
         <p class="caption">いいね機能</p>
         <div class="caption">気になるユーザーをいいねしよう！<br>いいねが返ってきたらメッセージのやりとりができます</div>
       </div>
     </div>
     
-    <div class=middle>
+    <div class=middle ontouchstart="">
       <div class="mask">
         <p class="caption">ダイレクトメッセージ機能</p>
         <div class="caption">気になるユーザーにメッセージを送ってみよう！<br>技術の話でも相談でも！</div>
       </div>
     </div>
     
-    <div class='sita'>
+    <div class='sita' ontouchstart="">
       <div class="mask">
         <p class="caption">タグ機能、つぶやき機能</p>
         <div class="caption">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます</div>
