--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,10 @@
       
       <%= yield %>
       
+      <footer>
+        <p>お問い合わせ</p>
+      </footer>
+      
     </div>
   </body>
 </html>
