--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -1,3 +1,9 @@
+<style>
+  footer{
+    display: none;
+  }
+</style>
+
 <h3 class="text-center messagebox-user"><%= @user.name %></h3>
 <div class="text-center">
   <% if @user.avatar.attached? %>
