--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -16,7 +16,10 @@
         </div>
       </div>
     <% end %>
+    <%= paginate users %>
   </div>
+<% else %>
+  <p>いいねされている人はいません</p>
 <% end %>
 
 
