--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -10,35 +10,32 @@
   </ul>
   <%= render 'messages/message_top', users: @users %>
 <% else %>
-  <h3 class="text-center">エンジニア専用の、マッチングアプリ。</h3>
-  <div class='container'>
-    
-    <div class='top' ontouchstart="">
-      <div class="mask">
-        <p class="caption">いいね機能</p>
-        <div class="caption">気になるユーザーをいいねしよう！<br>いいねが返ってきたらメッセージのやりとりができます</div>
-      </div>
+  <h3 class="text-center" style="font-size: 16px">エンジニア専用のマッチングアプリ。</h3>
+  <div class='top' ontouchstart="">
+    <div class="mask">
+      <p class="caption text-center">いいね機能</p>
+      <div class="caption text-center"><p>気になるユーザーをいいねしよう！<br>いいねが返ってきたらメッセージのやりとりができます</p></div>
     </div>
-    
-    <div class=middle ontouchstart="">
-      <div class="mask">
-        <p class="caption">ダイレクトメッセージ機能</p>
-        <div class="caption">気になるユーザーにメッセージを送ってみよう！<br>技術の話でも相談でも！</div>
-      </div>
-    </div>
-    
-    <div class='sita' ontouchstart="">
-      <div class="mask">
-        <p class="caption">タグ機能、つぶやき機能</p>
-        <div class="caption">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます</div>
-      </div>
-    </div>
-    
-    <a class="top-signup signup", href="<%= signup_path %>">Sign up</a>
-    
-    <p class="text-center">or</p>
-
-    <a class="top-signup login", href="<%= login_path %>">Login</a>
-
   </div>
+  
+  <div class=middle ontouchstart="">
+    <div class="mask">
+      <p class="caption text-center">ダイレクトメッセージ機能</p>
+      <div class="caption text-center">気になるユーザーにメッセージを送ってみよう！<br>技術の話でも相談でも！</div>
+    </div>
+  </div>
+  
+  <div class='sita' ontouchstart="">
+    <div class="mask">
+      <p class="caption text-center">タグ機能、つぶやき機能</p>
+      <div class="caption text-center">自分の得意な技術のタグに参加したり、つぶやいてみよう！</br>タグやつぶやきから気になるユーザーを探せます</div>
+    </div>
+  </div>
+  
+  <a class="top-signup signup", href="<%= signup_path %>">Sign up</a>
+  
+  <p class="text-center">or</p>
+
+  <a class="top-signup login", href="<%= login_path %>">Login</a>
+
 <% end %>
