--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
     <% if logged_in? %>
       <%= form_with(model: @post, local: true) do |f| %>
         <div class="form-group">
+          <%= f.label :content, "投稿内容" %>
           <%= f.text_area :content, class: 'form-control', rows: 5 %>
         </div>
         <%= f.submit '投稿', class: 'btn btn-primary btn-block' %>
