--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -198,6 +198,7 @@ div#message-footer{
 
 footer{
   margin-top: 100px;
+  margin-bottom: 10px;
   border-top: 1px solid #EEEEEE;
   text-align: center;
 }
@@ -337,5 +338,9 @@ footer{
 
 .tweet a{
   color: #FFFFFF;
+}
+
+.contact{
+  margin-top: 50px;
 }
 
