--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,7 @@
       <%= yield %>
       
       <footer>
-        <p>お問い合わせ</p>
+        <a href="<%= contact_path %>" style="color: #FFF">お問い合わせ</a>
       </footer>
       
     </div>
