--- a/app/views/messages/_message_form.html.erb
+++ b/app/views/messages/_message_form.html.erb
@@ -2,5 +2,5 @@
   <input type="hidden" name="from_id" value="<%= from_user.id %>">
   <input type="hidden" name="to_id" value="<%= to_user.id %>">
   <input type="hidden" name="room_id" value="<%= room_id %>">
-  <input type="text" name="content" data-behavior="chat_speaker" class="form-control" id="form">
+  <input type="text" name="content" data-behavior="chat_speaker" class="form-control" id="form" placeholder='Enterで送信'>
 </form>
