--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,6 +18,18 @@
     <% end %>
   </aside>
   <div class="col-sm-8">
+    <h3 class="text-center">投稿一覧</h3>
+    <div class="row">
+      <div class="col-6 offset-sm-3">
+        <%= form_tag(posts_path, method: :get) do %>
+          <div class="form-group">
+            <%= label_tag :search, '検索', class: 'search-label' %>
+            <%= text_field_tag :search,"", class:"form-control" , placeholder: 'キーワードを入力'%>
+          </div>
+            <%= submit_tag '検索', class: "btn btn-primary btn-block search-button" %>
+        <% end %>
+      </div>
+    </div>
     <%= render 'posts/posts', posts: @posts %>
   </div>
 </div>
