--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,4 +1,15 @@
 <h2 class='text-center tag'>タグ一覧</h2>
+<div class="row">
+  <div class="col-6 offset-3">
+    <%= form_tag(tags_path, method: :get) do %>
+      <div class="form-group">
+        <%= label_tag :search, '検索', class: 'search-label' %>
+        <%= text_field_tag :search,"", class:"form-control" , placeholder: 'キーワードを入力'%>
+      </div>
+      <%= submit_tag '検索', class: "btn btn-primary btn-block search-button" %>
+    <% end %>
+  </div>
+</div>
 <%= render 'tags/tags', tags:@tags %>
 
 <div class="row tag-form">
